--- a/Bio/Bio.html
+++ b/Bio/Bio.html
@@ -15,16 +15,38 @@
 <link href="https://fonts.googleapis.com/css2?family=Amita:wght@400;700&family=Josefin+Sans:ital,wght@0,100;0,300;0,500;1,100;1,300;1,500&family=Montserrat:wght@100;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="navButton--box" id="navBox">
+      <div class="svg--box" id="svg-button-box">
+        <button class="menuBtn" id="menuBtnBox" onclick="openNav()"></button>
+        <?xml version="1.0" encoding="UTF-8"?>
+        <svg id="b" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 343.33 963.46">
+          <defs>
+            <style>
+              .d {
+                fill: none;
+                stroke: #ffffff;
+                stroke-linecap: round;
+                stroke-linejoin: round;
+                stroke-width: 7px;
+              }
+            </style>
+          </defs>
+          <g id="c" data-name="Layer 4">
+            <path class="d" d="m154.28,23.46c-21,29,42,136,63,179,20.47,41.92-72.42,234.37-72,281.5.5,55.87,59,185.5,115,250.5,47.63,47.63-10,177.5-16.35,186.56-10.42,16.48-28.18,27.44-49.15,27.44-32.86,0-59.45-26.87-58.99-59.84.44-31.5,26.07-57.39,57.56-58.14,20.53-.49,38.75,9.51,49.68,25.01,0,0,12.25,18.47,12.25,39.47v66m40.26-509.42c-14.09,3.21-15.64,3.4-22.35,4.09-12.59,1.3-42.9-11.42-72.42-9.07-29.52,2.35-52.61,38.92-53.66,42.08,2.41,2.3,40,23.7,67.15,11.88,27.15-11.82,47.91-37.32,59.64-42.08,6.25-2.54,7.71-3.11,21.65-6.91ZM24.36,534.33c12.41-2.5,43.79,7.32,72.96,2.19,29.17-5.13,48.7-43.71,49.45-46.96-2.62-2.06-42.05-19.82-67.97-5.49-25.92,14.33-44.18,41.66-55.4,47.52-5.98,3.12-7.38,3.83-20.9,8.92,13.72-4.53,15.25-4.85,21.86-6.18ZM340.83,228.49c-11.62.06-12.87-.06-18.26-.69-10.11-1.18-31.68-16.45-55.27-19.76-23.58-3.31-48.1,21.37-49.47,23.66,1.49,2.22,27.26,25.59,50.64,21.05,23.38-4.54,44.12-20.93,54.16-22.62,5.35-.9,6.59-1.1,18.2-1.64Zm-226.74-28.31c9.21,4.34,24.77,25.71,46.06,36.38,21.29,10.67,52.4-4.88,54.44-6.62-.7-2.58-17.66-32.95-41.26-36.12-23.6-3.17-48.5,5.73-58.55,4.13-5.36-.85-6.6-1.07-17.77-4.26,11.03,3.65,12.18,4.18,17.08,6.49ZM211.28,18.43c-5.97,2.71-6.65,2.93-9.57,3.85-5.48,1.72-20.12-1.18-33.03,2.54s-19.86,22.09-20.04,23.59c1.28.8,19.94,6.91,30.94-.81,11-7.72,17.92-20.95,22.7-24.13,2.55-1.7,3.14-2.08,9-5.04Zm-106.92-8.52c3.66,4.43,6.47,19.09,14.78,29.65s27.94,10.1,29.4,9.7c.26-1.49-1.1-21.07-12.39-28.37s-26.14-8.73-30.9-11.96c-2.53-1.72-3.11-2.13-8.05-6.45,4.76,4.52,5.21,5.06,7.17,7.42Z"/>
+          </g>
+        </svg>
+  </div>
+    <nav class="overlay" id="mainNav">
+      <a href="javascript:void(0)"  class="closebtn" onclick="closeNav()">&times;</a>
+      <ul class="overlay--content">
+        <a href="../index.html">Home</a>
+        <a href="../Experience/Exp.html">Experience</a>
+        <a href="../Portfolio/Port.html">Portfolio</a>
+        <a href="../Bio/Bio.html">About Me</a>
+      </ul>
+    </nav>
+</div>
     <article>
-      <nav class="overlay" id="mainNav">
-        <a href="javascript:void(0)"  class="closebtn" onclick="closeNav()">&times;</a>
-        <ul class="overlay--content">
-          <a href="../index.html">Home</a>
-          <a href="../Experience/Exp.html">Experience</a>
-          <a href="#">Portfolio</a>
-          <a href="../Bio/Bio.html">About Me</a>
-        </ul>
-      </nav>
     <div class="tldr">
       <div class="gridObj aboutCard cute-box">
         <div class="aboutCard--title--item">
@@ -49,11 +71,11 @@
     </div>
 
       <div class="gridObj profilePic cute-box">
-        <img class="profilePic" src="../assets/placeHolder.jpg">
+        <img class="profilePic-img" src="../assets/portriat.jpg">
       </div>
       <div class="gridObj links cute-box">
-        <a class="socialLink indeed" href="#"><img src="../assets/placeHolder.jpg"></a>
-        <a class="socialLink email" href="#"><img src="../assets/placeHolder.jpg"></a>
+        <a class="socialLink indeed" href="https://www.linkedin.com/"><img src="../assets/placeHolder.jpg"></a>
+        <a class="socialLink email" href="mailto:mccrady.victoria@gmail.com"><img src="../assets/placeHolder.jpg"></a>
       </div>
       </div>
       <div class="gridObj cute-box about">
@@ -67,6 +89,5 @@
           
           Nam aliquet libero lorem, non porta erat ultricies sit amet. Sed viverra accumsan orci vel molestie. Maecenas quis metus dolor. Morbi sed volutpat eros, id auctor erat. Sed risus elit, efficitur nec dui ut, gravida vestibulum metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis sed metus at dictum. Donec a metus a massa mattis condimentum vitae quis ligula. Curabitur sagittis eros sit amet mauris semper, ac aliquet justo egestas. Duis pretium velit et pharetra aliquet. Ut viverra sodales purus at sollicitudin. Maecenas faucibus hendrerit nunc vitae suscipit. Maecenas dignissim gravida massa ac sodales. Vestibulum vel auctor lorem.</p>
         </div>
-        <div class="navButton--box"><button class="menuBtn cute-box" onclick="openNav()">open</button></div>
     </article>
   </body>
